--- a/app/templates/shop/shipping.html
+++ b/app/templates/shop/shipping.html
@@ -22,6 +22,10 @@
                     <h4><i class="fa fa-map-marker"></i> Seleccionar dirección existente</h4>
                     <hr>
                     <ng-include src="'/templates/shop/shipping-address.html'"></ng-include>
+                    <button ng-if="Payment.address" class="btn btn-danger" type="submit"
+                            ng-disabled="!Payment.address"
+                            ng-click="Payment.saveShippingAddress()">Continuar
+                    </button>
                     <br>
                 </div>
                 <div>
@@ -143,19 +147,13 @@
                                     </md-input-container>
                                 </div>
                             </div>
-                            <!--<div class="col-md-12" ng-if="idUser">
-                                <input type="checkbox"><span>Guardar mi información para la aproxima ocasión</span>
-                                {{Shipping.saveAddressNew}}
-                            </div>-->
-                            <div class="col-md-12 text-right" style="margin-top: 30px;" ng-if="Payment.sendOptions === '0'">
-                                <a href="" class="btn btn-outline-dark" ui-sref="shopcart"><i class="fa fa-angle-left"></i>
+                            <div class="col-md-12 text-right" style="margin-top: 30px;"
+                                 ng-if="Payment.sendOptions === '0'">
+                                <a href="" class="btn btn-outline-dark" ui-sref="shopcart"><i
+                                        class="fa fa-angle-left"></i>
                                     Regresar al carrito
                                 </a>
-                                <!--<button class="btn btn-cart" ng-disabled="Form.$invalid" ng-click="Order.createOrder()">Continuar</button>-->
-                                <button ng-if="Payment.address" class="btn btn-danger" type="submit"
-                                        ng-disabled="!Payment.address"
-                                        ng-click="Payment.saveShippingAddress()">Continuar
-                                </button>
+
                                 <button ng-if="!Form.$invalid && !Payment.address" class="btn btn-danger" type="submit"
                                         ng-disabled="Form.$invalid" ng-click="Payment.newShippingAddress()">Continuar
                                 </button>
