--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1217,6 +1217,26 @@ footer .contact-sty .download-app > i:hover {
   background-size: cover;
   background-position: center center;
 }
+.selectdemoSelectHeader .demo-header-searchbox {
+  border: none;
+  outline: none;
+  height: 100%;
+  width: 100%;
+  padding: 0;
+}
+.selectdemoSelectHeader .demo-select-header {
+  box-shadow: 0 1px 0 0 rgba(0,0,0,0.1), 0 0 0 0 rgba(0,0,0,0.14), 0 0 0 0 rgba(0,0,0,0.12);
+  padding-left: 10.667px;
+  height: 48px;
+  cursor: pointer;
+  position: relative;
+  display: flex;
+  align-items: center;
+  width: auto;
+}
+.selectdemoSelectHeader md-content._md {
+  max-height: 240px;
+}
 @media only screen and (min-width: 991px) and (max-width: 1024px) {
   .single_blog .comment-area {
     margin-top: -5px;
