--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -33,7 +33,7 @@
                     </uib-tab>
                     <uib-tab index="1" heading="Registrarme">
                         <form class="padding" name="registerForm" ng-submit="Access.createAccount()" novalidate>
-                            <md-input-container md-no-float ng-class="{ 'has-error': registerForm.businessName.$touched && registerForm.businessName.$invalid }">
+                            <md-input-container>
                                 <input type="text" ng-model="Access.formData.contactPersonName" id="businessName" name="businessName"
                                        placeholder="Nombre" required>
                                 <div class="help-block" ng-messages="registerForm.businessName.$error" ng-if="registerForm.businessName.$touched">
@@ -41,7 +41,7 @@
                                 </div>
                             </md-input-container>
 
-                            <md-input-container md-no-float ng-class="{ 'has-error': registerForm.username.$touched && registerForm.username.$invalid }">
+                            <md-input-container md-no-float">
                                 <input type="text" ng-minlength="5" ng-maxlength="10" ng-model="Access.formData.username" id="username" name="username"
                                        placeholder="Usuario" required>
                                 <div class="help-block" ng-messages="registerForm.username.$error" ng-if="registerForm.username.$touched">
@@ -51,7 +51,7 @@
                                 </div>
                             </md-input-container>
 
-                            <md-input-container md-no-float ng-class="{ 'has-error': registerForm.email.$touched && registerForm.email.$invalid }">
+                            <md-input-container md-no-float">
                                 <input type="email" ng-model="Access.formData.contactPersonEmail" class="form-control" id="email" name="email"
                                        placeholder="Correo electrónico" required>
                                 <div class="help-block" ng-messages="registerForm.email.$error" ng-if="registerForm.email.$touched">
@@ -60,7 +60,7 @@
                                 </div>
                             </md-input-container>
 
-                            <md-input-container md-no-float ng-class="{ 'has-error': registerForm.phone.$touched && registerForm.phone.$invalid }">
+                            <md-input-container md-no-float">
                                 <input type="text" ng-model="Access.formData.contactPersonPhone" class="form-control" id="phone" name="phone"
                                        placeholder="Whatspp" required>
                                 <div class="help-block" ng-messages="registerForm.phone.$error" ng-if="registerForm.phone.$touched">
@@ -70,7 +70,7 @@
 
                             <div class="row">
                                 <div class="col-md-6">
-                                    <md-input-container md-no-float ng-class="{ 'has-error': registerForm.password.$touched && registerForm.password.$invalid }">
+                                    <md-input-container>
                                         <input type="password" ng-minlength="8" ng-model="Access.formData.password" class="form-control" name="password"
                                                placeholder="Contraseña" required="Access.formData.password2">
                                         <div class="help-block" ng-messages="registerForm.password.$error" ng-if="registerForm.password.$touched">
@@ -80,7 +80,7 @@
                                     </md-input-container>
                                 </div>
                                 <div class="col-md-6">
-                                    <md-input-container md-no-float ng-class="{ 'has-error': registerForm.password2.$touched && registerForm.password2.$invalid }">
+                                    <md-input-container>
                                         <input type="password" ng-model="Access.formData.password2" class="form-control" id="password2" name="password2"
                                                placeholder="Confirmar contraseña"
                                                compare-to="Access.formData.password" ng-required="Access.formData.password">
@@ -91,6 +91,115 @@
                                     </md-input-container>
                                 </div>
                             </div>
+
+                            <md-input-container md-no-float">
+                                <input type="text" ng-model="Access.formData.metadata.giro" id="giro" name="giro"
+                                       placeholder="Tipo de negocio" required>
+                                <div class="help-block" ng-messages="registerForm.giro.$error" ng-if="registerForm.giro.$touched">
+                                    <div class="text-danger" ng-message="required">El campo nombre es requerido</div>
+                                </div>
+                            </md-input-container>
+
+                            <div class="row" ng-if="registerExtend">
+                                <div class="col-md-6">
+                                    <md-input-container class="md-block">
+                                        <label for="city">Estado</label>
+                                        <md-select ng-model="Access.state"
+                                                   md-on-open="Access.getStates()"
+                                                   data-md-container-class="selectdemoSelectHeader"
+                                                   md-on-close="searchState='';Address.clearCities()"
+                                                   name="state"
+                                                   required>
+                                            <md-select-header class="demo-select-header">
+                                                <input ng-model="searchState" type="search"
+                                                       placeholder="Busca un estado..."
+                                                       class="demo-header-searchbox md-text"
+                                                       ng-keydown="$event.stopPropagation()">
+                                            </md-select-header>
+                                            <div layout="row" layout-align="center center"
+                                                 ng-if="Access.busyState">
+                                                <md-progress-circular md-mode="indeterminate"
+                                                                      class="md-warn md-default-theme"
+                                                                      style="transform: scale(1);"></md-progress-circular>
+                                            </div>
+                                            <md-option ng-repeat="state in Access.states | filter:searchState"
+                                                       ng-value="state">
+                                                {{state.name}}
+                                            </md-option>
+                                        </md-select>
+                                        <div class="help-block" ng-messages="registerForm.name.$error">
+                                            <div class="text-danger" ng-message="required">Este campo es requerido.</div>
+                                        </div>
+                                    </md-input-container>
+                                </div>
+                                <div class="col-md-6">
+                                    <md-input-container class="md-block">
+                                        <label for="city">Ciudad</label>
+                                        <md-select ng-model="Access.city"
+                                                   md-on-open="Access.getCitiesByState()"
+                                                   data-md-container-class="selectdemoSelectHeader"
+                                                   md-on-close="searchCity=''"
+                                                   ng-disabled="Access.disableCity" name="city" id="city"
+                                                   required>
+                                            <md-select-header class="demo-select-header">
+                                                <input ng-model="searchCity" type="search"
+                                                       placeholder="Busca una ciudad de {{Access.state.name}}"
+                                                       class="demo-header-searchbox md-text"
+                                                       ng-keydown="$event.stopPropagation()">
+                                            </md-select-header>
+                                            <div layout="row" layout-align="center center"
+                                                 ng-if="Access.busyCity">
+                                                <md-progress-circular md-mode="indeterminate"
+                                                                      class="md-warn md-default-theme"
+                                                                      style="transform: scale(1);"></md-progress-circular>
+                                            </div>
+                                            <md-option ng-repeat="city in Access.cities | filter:searchCity"
+                                                       ng-value="city">
+                                                {{city.name}}
+                                            </md-option>
+                                        </md-select>
+                                        <div class="help-block" ng-messages="registerForm.name.$error">
+                                            <div class="text-danger" ng-message="required">Este campo es requerido.</div>
+                                        </div>
+                                    </md-input-container>
+                                </div>
+                            </div>
+
+                            <div class="row" ng-if="registerExtend">
+                                <div class="col-md-4">
+                                    <md-input-container md-no-float">
+                                        <input type="text" ng-model="Access.address.address" class="form-control" name="address"
+                                               placeholder="Dirección" required>
+                                        <div class="help-block" ng-messages="registerForm.address.$error" ng-if="registerForm.address.$touched">
+                                            <div class="text-danger" ng-message="required">Este campo es requerido.</div>
+                                        </div>
+                                    </md-input-container>
+                                </div>
+                                <div class="col-md-4">
+                                    <md-input-container md-no-float>
+                                        <input type="text" ng-model="Access.address.neighborhood"
+                                               class="form-control"
+                                               id="neighborhood" name="neighborhood"
+                                               placeholder="Colonia"
+                                               required>
+                                        <div class="help-block" ng-messages="registerForm.neighborhood.$error" ng-if="registerForm.neighborhood.$touched">
+                                            <div class="text-danger" ng-message="required">Este campo es requerido.</div>
+                                        </div>
+                                    </md-input-container>
+                                </div>
+                                <div class="col-md-4">
+                                    <md-input-container md-no-float>
+                                        <input type="text" ng-model="Access.address.zip" class="form-control" name="zip"
+                                               placeholder="Código postal" ng-pattern="/^[0-9]{5}$/"
+                                               maxlength="5" required>
+                                        <div class="help-block" ng-messages="registerForm.zip.$error" ng-if="registerForm.zip.$touched">
+                                            <div class="text-danger" ng-message="required">Este campo es requerido.</div>
+                                            <div class="text-danger" ng-message="pattern">Formato no válido</div>
+                                        </div>
+                                    </md-input-container>
+                                </div>
+                            </div>
+
                             <div class="text-center" style="padding-top: 15px;">
                                 <button type="submit" class="btn btn-outline-danger"
                                         ng-disabled="registerForm.$invalid">
