--- a/app/templates/shop/shipping.html
+++ b/app/templates/shop/shipping.html
@@ -98,7 +98,7 @@
                                                         ng-class="{ 'has-error': Form.address.$touched && Form.address.$invalid }">
                                         <input ng-model="Payment.formData.address" type="text" id="address"
                                                name="address"
-                                               placeholder="Dirección"
+                                               placeholder="Calle y número"
                                                required>
                                         <span ng-messages="Form.address.$error" ng-if="Form.address.$touched">
                                         <a ng-message="required" data-toggle="tooltip" title="Holiis"></a></span>
